authpolicy: Add error code for missing machine account

Renamed ERROR_BAD_MACHINE_NAME to ERROR_INVALID_MACHINE_NAME since
it does not have the same meaning as ERROR_BAD_USER_NAME. The former
means that the machine name has invalid characters, the latter usually
means that the account does not exist in Active Directory, e.g.
mistyped user name. Did not change ID to not break UMA.

Added a new ERROR_BAD_MACHINE_NAME error in the end that has the
corresponding meaning as ERROR_BAD_USER_NAME but for machine accounts.

CQ-DEPEND=CL:482976

BUG=chromium:713037
TEST=Compiled, ran tests.

Change-Id: I2363d2735a38c0ee2e7172ec5cb07e7b85d8fa91
Reviewed-on: https://chromium-review.googlesource.com/483099
Commit-Ready: Lutz Justen <ljusten@chromium.org>
Tested-by: Lutz Justen <ljusten@chromium.org>
Reviewed-by: Dan Erat <derat@chromium.org>
Reviewed-by: Roman Sorokin <rsorokin@chromium.org>